--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,7 +1,9 @@
 {
   "private": true,
   "name": "web",
-  "version": "1.0.0",
+  "imports": {
+    "#*": "./*"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +11,8 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "api": "workspace:*",
+    "hono": "^4.6.13",
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
