--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,13 +1,9 @@
 {
   "name": "api",
-  "type": "module",
-  "imports": {
-    "#*": "./src/*"
-  },
   "main": "./dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "build": "webpack",
     "start": "node ."
   },
   "dependencies": {
@@ -20,8 +16,11 @@
   },
   "devDependencies": {
     "@types/dotenv-safe": "^8.1.6",
-    "@types/node": "^20.11.17",
+    "@types/node": "^20.17.10",
+    "ts-loader": "^9.5.1",
     "tsx": "^4.7.1",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4"
   }
 }
