--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "NodeNext",
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "strict": true,
     "skipLibCheck": true,
     "types": ["node"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-    "outDir": "./dist",
-    "paths": {
-      "#*": ["./src/*"]
-    }
+    "outDir": "./dist"
   },
   "exclude": ["node_modules"]
 }
