--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -4,5 +4,5 @@
     "outDir": "./dist"
   },
   "include": ["**/*.ts", "**/*.tsx", "tsup.config.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
